Time: 0 ms (100%), Space: 42.9 MB (31.06%) - LeetHub